--- a/.github/workflow/second-act.yml
+++ b/.github/workflow/second-act.yml
@@ -1,12 +1,50 @@
-name: Chaitanya
+name: End to End CI/CD workflow for Java Applicaton with Maven, Sonar and k8s Intergation
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
-steps:
-  - uses: actions/checkout@v4
-  - name: Set up JDK 11 for x64
-    uses: actions/setup-java@v4
-    with:
-      java-version: '11'
-      distribution: 'temurin'
-      architecture: x64
+env:
+  KUBECONFIG: ${{ secrets.KUBECONFIG }}
+  SONAR_TOKEN: ${{ secrets.SONAR_TKN }}
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Java jdk setup
+      uses: actions/setup-java@v1
+      with:
+        java-version: 12
+
+    - name: maven target # change accordingly
+      run: mvn clean install
+
+    - name: Perform analysis on Sonar Qube
+      uses: sonarsource/sonarcloud-github-action@v1
+      with:
+        sonarcloud.organization: <name of your org>
+        sonarcloud.projectKey: <key>
+        sonarcloud.projectName: <name>
+        sonarcloud.token: ${{ env.SONAR_TKN }}
+        sonarcloud.scannerVersion: "4.2.0.1873"
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Deploy to k8s
+      uses: stefanzweifel/k8s-action@v2.0.0
+      with:
+        args: apply -f kubernetes/
+      env:
+        KUBECONFIG: ${{ env.KUBECONFIG }}
