--- a/.github/workflows/chaya.yml
+++ b/.github/workflows/chaya.yml
@@ -1,17 +1,21 @@
 name: chaitu
 
-on: [push]
-
+on: 
+  push:
+    branches:
+        - main
 jobs:
-  build:
-    runs on: ubuntu-latest
-  
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
+   build:
+        runs on: ubuntu-latest
+        
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+       
+        - name: Set up Python
+          uses: actions/setup-python@v5
+          with:
             python-version: '3.x'
-      - name: Install dependencies
-        run: 
-          python -m pip install --upgrade pip setuptools wheel
+        - name: Install dependencies
+          run: 
+            python -m pip install --upgrade pip setuptools wheel
