--- a/.github/workflows/chaya.yml
+++ b/.github/workflows/chaya.yml
@@ -16,6 +16,11 @@ jobs:
           uses: actions/setup-python@v5
           with:
             python-version: '3.x'
+            
         - name: Install dependencies
-          run: 
+          run: |
             python -m pip install --upgrade pip setuptools wheel
+
+        - name: Run tests  # Optional step to run tests
+           run: |
+              python -m unittest discover -s tests
