--- a/.github/workflows/chaya.yml
+++ b/.github/workflows/chaya.yml
@@ -6,7 +6,7 @@ on:
         - main
 jobs:
    build:
-        runs on: ubuntu-latest
+        runs-on: ubuntu-latest
         
       steps:
         - name: Checkout code
@@ -21,6 +21,6 @@ jobs:
           run: |
             python -m pip install --upgrade pip setuptools wheel
 
-        - name: Run tests  # Optional step to run tests
+        - name: Run tests  
            run: |
               python -m unittest discover -s tests
