--- a/.github/workflows/chaya.yml
+++ b/.github/workflows/chaya.yml
@@ -14,13 +14,17 @@ jobs:
         uses: actions/checkout@v4
      
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
         
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
+      
+      - name: Verify tests directory
+        run: |
+          if [ ! -d "tests" ]; then echo "Directory 'tests' not found"; exit 1; fi
       
       - name: Run tests
         run: |
