--- a/.github/workflows/java with ant.yaml
+++ b/.github/workflows/java with ant.yaml
@@ -16,3 +16,10 @@ steps:
       java-version: '11'
       distribution: 'temurin'
       architecture: x64
+  - uses: actions/checkout@v4
+  - uses: actions/setup-java@v4
+    with:
+      java-version: '17'
+      distribution: 'temurin'
+  - name: Run the Ant jar target
+    run: ant -noinput -buildfile build-ci.xml jar    
