Update java with ant.yaml

--- a/.github/workflows/java with ant.yaml
+++ b/.github/workflows/java with ant.yaml
@@ -1,4 +1,4 @@
-name: specifying the java version and architecture
+name: specifying the java version and architecture, building and testing code
 
 on:
   push:
