--- a/.github/workflows/java ant 2.yaml
+++ b/.github/workflows/java ant 2.yaml
@@ -8,13 +8,17 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Set Up Java  
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - run: ant -noinput -buildfile build.xml
+      - name: Build with ant
+        run: ant -noinput -buildfile build.xml
+      - name: Upload Artifact  
       - uses: actions/upload-artifact@v3
         with:
           name: Package
