--- a/.github/workflows/go-4.yaml
+++ b/.github/workflows/go-4.yaml
@@ -1,9 +1,9 @@
-name: caching dependencies
+name: Caching Dependencies
 
 on:
   push:
     branches:
-        - main
+      - main
 
 jobs:
   build: 
@@ -28,7 +28,3 @@ jobs:
       - name: Install dependencies
         run: go mod download
         working-directory: ./subdir
-          
-
-    
-    
