--- a/.github/workflows/go-4.yaml
+++ b/.github/workflows/go-4.yaml
@@ -11,16 +11,18 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.17'
+
       - name: Cache Go Modules
         uses: actions/cache@v3
         with:
-          path: | 
-            C:\Users\runneradmin\go\pkg\mod
-            C:\Users\runneradmin\go\bin
+          path: |
+            ${{ env.GO_PATH }}/pkg/mod
+            ${{ env.GO_PATH }}/bin
           key: ${{ runner.os }}-go-${{ hashFiles('subdir/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
