--- a/.github/workflows/go-4.yaml
+++ b/.github/workflows/go-4.yaml
@@ -22,8 +22,7 @@ jobs:
         with:
           path: |
             C:\Users\runneradmin\go\pkg\mod
-            C:\Users\runneradmin\go\bin
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: ${{ runner.os }}-go-${{ hashFiles('subdir/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
