--- a/.github/workflows/go-5.yaml
+++ b/.github/workflows/go-5.yaml
@@ -1,4 +1,4 @@
-name: Go
+name: building abd testing your code
 
 on:
   push:
@@ -10,14 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.21.x'
+          
       - name: Install dependencies
-        run: go get .
+        run: go mod tidy
+        
       - name: Build
         run: go build -v ./...
+        
       - name: Test with the Go CLI
-        run: go test
+        run: go test -v ./...
