--- a/.github/workflows/go-5.yaml
+++ b/.github/workflows/go-5.yaml
@@ -1,9 +1,9 @@
-name: building abd testing your code
+name: Go
 
 on:
   push:
     branches:
-        - main
+      - main
 
 jobs:
   build:
@@ -11,17 +11,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.21.x'
-          
+
       - name: Install dependencies
         run: go mod tidy
-        
+
       - name: Build
         run: go build -v ./...
-        
+
       - name: Test with the Go CLI
         run: go test -v ./...
