--- a/.github/workflows/node.js-1.yaml
+++ b/.github/workflows/node.js-1.yaml
@@ -1,19 +1,19 @@
 name: specifying the node.js version
 
-on:[push, pull_request]
+on:
+  [push, pull_request]
 
 jobs:
   test:
-    runs-on:ubuntu-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
           node-version: ['18.x', '20.x']
-
-steps:
-- uses: actions/checkout@v4
-- name: Use Node.js ${{ matrix.node-version }}
-  uses: actions/setup-node@v4
-  with:
-    node-version: ${{ matrix.node-version }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
     
 
