--- a/.github/workflows/node.js-2.yaml
+++ b/.github/workflows/node.js-2.yaml
@@ -1,17 +1,27 @@
 name: single version of node.js
 
-on: [push]
+on: 
+  push:
+    branches:
+        - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm test
+          
+      - name: Install dependencies    
+        run: npm install
+
+      - name: Build Project
+        run: npm run build --if-present
+
+      - name: Run tests  
+        run: npm test
