--- a/.github/workflows/node.js-2.yaml
+++ b/.github/workflows/node.js-2.yaml
@@ -19,9 +19,12 @@ jobs:
           
       - name: Install dependencies    
         run: npm install
+        working-directory: ./node.js-2.yaml
 
       - name: Build Project
         run: npm run build --if-present
+        working-directory: ./node.js-2.yaml
 
       - name: Run tests  
         run: npm test
+        working-directory: ./node.js-2.yaml
