--- a/.github/workflows/node.js-2.yaml
+++ b/.github/workflows/node.js-2.yaml
@@ -3,7 +3,7 @@ name: single version of node.js
 on: 
   push:
     branches:
-        - main
+      - main
 
 jobs:
   build:
@@ -12,12 +12,16 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-      - name: setup Node.js
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          
-      - name: Install dependencies    
+
+      - name: List files in the repository
+        run: ls -R
+     
+      - name: Install dependencies
         run: npm install
         working-directory: ./node.js-2
 
@@ -25,6 +29,6 @@ jobs:
         run: npm run build --if-present
         working-directory: ./node.js-2
 
-      - name: Run tests  
+      - name: Run tests
         run: npm test
         working-directory: ./node.js-2
