--- a/.github/workflows/js-2.yaml
+++ b/.github/workflows/js-2.yaml
@@ -17,16 +17,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-
-      - name: List files in the repository
-        run: ls -R
-     
+          
       - name: Install dependencies
         run: npm install
+        working-directory: ./js-2
         
       - name: Build Project
         run: npm run build --if-present
+        working-directory: ./js-2
 
       - name: Run tests
         run: npm test
+        working-directory: ./js-2
        
