--- a/.github/workflows/js-2.yaml
+++ b/.github/workflows/js-2.yaml
@@ -20,13 +20,13 @@ jobs:
           
       - name: Install dependencies
         run: npm install
-        working-directory: ./js-2
+        working-directory: js-2
         
       - name: Build Project
         run: npm run build --if-present
-        working-directory: ./js-2
+        working-directory: js-2
 
       - name: Run tests
         run: npm test
-        working-directory: ./js-2
+        working-directory: js-2
        
