--- a/.github/workflows/js-2.yaml
+++ b/.github/workflows/js-2.yaml
@@ -10,22 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
+     - uses: actions/checkout@v4
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-
-      - name: List directory contents
-        run: ls -R  
-        
-      - name: Install dependencies
-        run: npm install --prefix js-2
-        
-      - name: Build Project
-        run: npm run build --prefix js-2 --if-present
-    
-      - name: Run tests
-        run: npm test --prefix js-2
+          node-version: '20.x'
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
