--- a/.github/workflows/js-2.yaml
+++ b/.github/workflows/js-2.yaml
@@ -10,14 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-     - name: Check out code
-     - uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v4
      
-     - name: Use Node.js
-       uses: actions/setup-node@v4
-       with:
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
           node-version: '20.x'
           
-     - run: npm ci
-     - run: npm run build --if-present
-     - run: npm test
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
