--- a/.github/workflows/js-2.yaml
+++ b/.github/workflows/js-2.yaml
@@ -19,8 +19,8 @@ jobs:
           node-version: '20.x'
           
       - run: npm install
-        working-directory: ./chay/js-2
+        working-directory: ./chay/js-2.yaml
       - run: npm run build --if-present
-        working-directory: ./chay/js-2
+        working-directory: ./chay/js-2.yaml
       - run: npm test
-        working-directory: ./chay/js-2
+        working-directory: ./chay/js-2.yaml
