--- a/.github/workflows/s3 creation.yaml
+++ b/.github/workflows/s3 creation.yaml
@@ -16,10 +16,10 @@ jobs:
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: AKIAS66UC3NRYRQXXAW3
+          aws-secret-access-key: MDs+Q60rTlrEpijhdD+oi7MFyN4FHT+lpbEO6F78
+          aws-region: ap-south-1
 
       - name: Sync files to S3
         run: |
-          aws s3 sync ./path/to/your/files s3://your-bucket-name --delete
+          aws s3 sync D:\Files s3://chaitu-401
