--- a/.github/workflows/s3 creation.yaml
+++ b/.github/workflows/s3 creation.yaml
@@ -22,4 +22,4 @@ jobs:
 
       - name: Sync files to S3
         run: |
-          aws s3 sync D:\Files s3://chaitu-401
+          aws s3 sync ./D:\Files s3://chaitu-401
