--- a/.github/workflows/s3 creation.yaml
+++ b/.github/workflows/s3 creation.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up AWS CLI
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: AKIAS66UC3NRYRQXXAW3
           aws-secret-access-key: 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
@@ -22,4 +22,4 @@ jobs:
 
       - name: Sync files to S3
         run: |
-          aws s3 sync ./D:\Files s3://chaitu-401 --delete
+          aws s3 sync ./Files s3://chaitu-401 --delete
