--- a/.github/workflows/s3 creation.yaml
+++ b/.github/workflows/s3 creation.yaml
@@ -13,11 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Verify current directory
+        run:  |
+          pwd
+          ls -l
+  
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: AKIAS66UC3NRYRQXXAW3
-          aws-secret-access-key: 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
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
 
       - name: Sync files to S3
