--- a/.github/workflows/s3 creation.yaml
+++ b/.github/workflows/s3 creation.yaml
@@ -3,7 +3,7 @@ name: S3 deployment
 on:
   push:
     branches:
-        - main
+      - main
 
 jobs:
   deploy:
@@ -14,16 +14,24 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Verify current directory
-        run:  |
+        run: |
           pwd
           ls -l
-  
+
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
+
+      - name: Check AWS CLI version
+        run: aws --version
+
+      - name: Debug AWS Credentials
+        run: |
+          echo "AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}"
+          echo "AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}"
 
       - name: Sync files to S3
         run: |
